Fixed/ restriction error and users not showing in the card

--- a/bug-tracker/src/Components/Board/Board.css
+++ b/bug-tracker/src/Components/Board/Board.css
@@ -77,7 +77,7 @@
     box-sizing: border-box;
     display: inline-block;
     height: 100%;
-    margin: 4px 27px;
+    margin: 4px 10px;
 
     vertical-align: top;
     white-space: nowrap;
